--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
             <div id="question-text">
                 Question here
             </div>
-            <table id="answer-choices">
-                <tr>
-                    <td class="answer-button">Answer 1</td>
-                    <td class="answer-button">Answer 2</td>
-                </tr>
-                <tr>
-                    <td class="answer-button">Answer 3</td>
-                    <td class="answer-button">Answer 4</td>
-                </tr>
-            </table>
+            <div id="answer-choices">
+                <div class="answer-button">Answer 1</div>
+                <div class="answer-button">Answer 2</div>
+                <div class="answer-button">Answer 3</div>
+                <div class="answer-button">Answer 4</div>
+            </div>
         </div>
     </body>
 </html>
