Add correct/incorrect screen and shuffling

--- a/index.html
+++ b/index.html
@@ -3,17 +3,21 @@
     <head>
         <title>Testlet</title>
         <link href="main.css" rel="stylesheet"/>
+        <script src="main.js"></script>
     </head>
-    <body>
-        <div id="question-section">
-            <div id="question-text">
-                Question here
-            </div>
-            <div id="answer-choices">
-                <div class="answer-button">Answer 1</div>
-                <div class="answer-button">Answer 2</div>
-                <div class="answer-button">Answer 3</div>
-                <div class="answer-button">Answer 4</div>
+    <body onload="populateQuestion(0)">
+        <div id="question-section" class="main-content">
+            <div id="question-text"></div>
+            <div id="answer-choices"></div>
+        </div>
+        <div id="correct-box" class="main-content" style="display: none;">
+            <div class="result">Correct!</div>
+        </div>
+        <div id="incorrect-box" class="main-content" style="display: none">
+            <div class="result">Incorrect</div>
+            <div>
+                Correct answer:
+                <span id="correct-answer">test</span>
             </div>
         </div>
     </body>
