--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Testlet</title>
         <link href="main.css" rel="stylesheet"/>
+        <script src="questions.js"></script>
         <script src="main.js"></script>
     </head>
     <body onload="setup()">
