Add button controls

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
             <div id="question-text"></div>
             <div id="answer-choices"></div>
         </div>
-        <div id="correct-box" class="main-content" style="display: none;">
+        <div id="correct-box" class="main-content result-dialog" style="display: none;">
             <div class="result">Correct!</div>
             <div class="continue-button">Continue</div>
         </div>
-        <div id="incorrect-box" class="main-content" style="display: none;">
+        <div id="incorrect-box" class="main-content result-dialog" style="display: none;">
             <div class="result">Incorrect!</div>
             <div>
                 Correct answer:
