Add Summary page

--- a/index.html
+++ b/index.html
@@ -12,14 +12,65 @@
             <div id="answer-choices"></div>
         </div>
         <div id="correct-box" class="main-content result-dialog" style="display: none;">
-            <div class="result">Correct!</div>
+            <div class="result title">Correct!</div>
             <div class="continue-button">Continue</div>
         </div>
         <div id="incorrect-box" class="main-content result-dialog" style="display: none;">
-            <div class="result">Incorrect!</div>
+            <div class="result title">Incorrect!</div>
             <div>
                 Correct answer:
                 <span id="correct-answer">test</span>
+            </div>
+            <div class="continue-button">Continue</div>
+        </div>
+        <div id="block-summary" class="main-content">
+            <h1>Section Results:</h1>
+            <div id="summary">
+                <div class="summary-item">
+                    <div class="summary-question">Question text here</div>
+                    <div class="confidence-summary">
+                        <div class="confidence-bar">
+                            <div style="width:50%"></div>
+                        </div>
+                        <span>50%</span>
+                    </div>
+                </div>
+                <div class="summary-item">
+                    <div class="summary-question">Question text here</div>
+                    <div class="confidence-summary">
+                        <div class="confidence-bar">
+                            <div style="width:100%"></div>
+                        </div>
+                        <span>100%</span>
+                    </div>
+                </div>
+                <div class="summary-item">
+                    <div class="summary-question">Question text here</div>
+                    <div class="confidence-summary">
+                        <div class="confidence-bar">
+                            <div style="width:90%"></div>
+                        </div>
+                        <span>90%</span>
+                    </div>
+                </div>
+                <div class="summary-item">
+                    <div class="summary-question">Question text here</div>
+                    <div class="confidence-summary">
+                        <div class="confidence-bar">
+                            <div style="width:50%"></div>
+                        </div>
+                        <span>50%</span>
+                    </div>
+                </div>
+                <div class="summary-item">
+                    <div class="summary-question">Question text here</div>
+                    <div class="confidence-summary">
+                        <div class="confidence-bar">
+                            <div style="width:50%"></div>
+                        </div>
+                        <span>50%</span>
+                    </div>
+                </div>
             </div>
             <div class="continue-button">Continue</div>
         </div>
