Add summary population

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div class="continue-button">Continue</div>
         </div>
-        <div id="block-summary" class="main-content">
+        <div id="block-summary" class="main-content" style="display: none;">
             <h1>Section Results:</h1>
             <div id="summary">
                 <div class="summary-item">
@@ -72,7 +72,7 @@
                     </div>
                 </div>
             </div>
-            <div class="continue-button">Continue</div>
+            <!-- <div class="continue-button">Continue</div> -->
         </div>
     </body>
 </html>
