--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     </head>
     <body onload="setup()">
         <div id="question-section" class="main-content">
+            <div id="section-progress">
+                <div id="answered-questions" style="width:50%">
+                    <div id="correct-percentage" style="width:80%"></div>
+                </div>
+            </div>
             <div id="question-text"></div>
             <div id="answer-choices"></div>
         </div>
