Add continue button to summary

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
             <div id="question-text"></div>
             <div id="answer-choices"></div>
         </div>
-        <div id="correct-box" class="main-content result-dialog" style="display: none;">
+        <div id="correct-box" class="main-content result-dialog post-question" style="display: none;">
             <div class="result title">Correct!</div>
             <div class="continue-button">Continue</div>
         </div>
-        <div id="incorrect-box" class="main-content result-dialog" style="display: none;">
+        <div id="incorrect-box" class="main-content result-dialog post-question" style="display: none;">
             <div class="result title">Incorrect!</div>
             <div>
                 Correct answer:
@@ -28,7 +28,7 @@
             </div>
             <div class="continue-button">Continue</div>
         </div>
-        <div id="block-summary" class="main-content" style="display: none;">
+        <div id="block-summary" class="main-content post-question" style="display: none;">
             <h1>Section Results:</h1>
             <div id="summary">
                 <div class="summary-item">
@@ -77,7 +77,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <div class="continue-button">Continue</div> -->
+            <div class="continue-button">Continue</div>
         </div>
     </body>
 </html>
